--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,7 +15,7 @@
 */
 
 :root {
-  --fundo-principal: #fbfdff85;
+  --fundo-principal: #f3f3f3;
   --texto: #000000;
   --texto-inverso: #ffffff;
   --destaque: #0014cc;
@@ -23,60 +23,53 @@
   --fundo-card: #ffffff;
 }
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.5em;
   background-color: var(--fundo-principal);
   color: var(--texto);
 }
-
 header {
   background-color: var(--destaque);
   color: var(--texto);
-
   padding: 10px;
+
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-content: center;
 
-  position: sticky; /* Mantém o cabeçalho fixo no topo */
-  top: 0; /* Define a posição do cabeçalho */
+  position: sticky; /* Mantém o cabeçalho visível ao rolar a página */
+  top: 0; /* Fixa o cabeçalho no topo da janela */
   z-index: 1000; /* Garante que o cabeçalho fique acima de outros elementos */
 }
-
 nav#menu ul {
-  list-style-type: none;
+  list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
-
 nav#menu a {
   text-decoration: none;
   color: var(--texto-inverso);
-
   font-weight: 600;
-  padding: 10px 14px;
-  border-radius: 8px;
-  transition: background-color 0.3s, color 0.3s;
+  padding: 12px 15px;
+  border-radius: 5px;
+  transition: blackground-color 0.5s, color 0.5s;
 }
-
 nav#menu a:hover {
   background-color: var(--destaque-inverso);
   color: var(--destaque);
 }
-
 main {
   display: grid;
   grid-template-columns: auto 90vw auto;
   gap: 20px;
   margin-top: 20px;
 }
-
 section#ficha {
   background-color: var(--fundo-card);
   padding: 20px;
   border-radius: 8px;
   grid-column: 2;
 }
-
 section#ficha img {
   width: 200px;
   aspect-ratio: 1/1;
@@ -88,14 +81,12 @@ section#ficha img {
   margin: auto;
   margin-bottom: 15px;
 }
-
 section#ficha h1 {
   color: var(--destaque);
   margin: 15px 0;
   font-size: 1.5em;
   text-align: left;
 }
-
 div#social {
   display: flex;
   justify-content: center;
@@ -105,39 +96,32 @@ div#social {
   gap: 1em;
   margin-top: 15px;
 }
-
 div#social a {
   color: var(--destaque);
   transition: color 0.5s;
 }
-
 div#social a:hover {
   color: var(--destaque-inverso);
 }
-
 section#detalhes {
   grid-column: 2;
 }
-
 article {
   background-color: var(--fundo-card);
   padding: 20px;
   margin-top: 20px;
   border-radius: 5px;
 }
-
 article h2 {
   color: var(--destaque);
   margin-bottom: 20px;
 }
-
 article#video .video-conteiner {
   position: relative;
   width: 100%;
   margin: auto;
   aspect-ratio: 16/9;
 }
-
 .video-conteiner iframe {
   position: absolute;
   top: 0;
@@ -146,29 +130,24 @@ article#video .video-conteiner {
   height: 100%;
   border-radius: 8px;
 }
-
 #skills-conteiner {
   display: grid;
   grid-template-columns: 1fr;
   gap: 15px;
 }
-
 #skills-conteiner .info {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 #skills-conteiner .nome {
   font-weight: bold;
   color: var(--texto);
 }
-
 #skills-conteiner .porcent {
   font-weight: bold;
   color: var(--destaque);
 }
-
 #skills-conteiner .barra {
   width: 100%;
   height: 8px;
@@ -176,7 +155,6 @@ article#video .video-conteiner {
   border-radius: 5px;
   margin-top: 8px;
 }
-
 #skills-conteiner .progresso {
   height: 100%;
   background-color: var(--destaque-inverso);
@@ -188,7 +166,6 @@ article#video .video-conteiner {
   flex-direction: column-reverse;
   gap: 15px;
 }
-
 #formacao-conteiner .curso {
   background-color: var(--fundo-principal);
   border-radius: 8px;
@@ -196,19 +173,16 @@ article#video .video-conteiner {
   padding-left: 8px;
   transition: border-left-width 0.5s, border-color 0.5s;
 }
-
 #formacao-conteiner .curso:hover {
   border-left-width: 15px;
   border-color: var(--destaque);
   cursor: pointer;
 }
-
 #formacao-conteiner .periodo {
   font-size: 0.8em;
   font-weight: bold;
   color: var(--texto);
 }
-
 #formacao-conteiner .instituicao {
   color: var(--destaque-inverso);
   font-size: 1.1em;
@@ -219,7 +193,6 @@ article#video .video-conteiner {
   flex-direction: column-reverse;
   gap: 20px;
 }
-
 #projeto-conteiner .projeto {
   display: flex;
   flex-direction: column;
@@ -230,13 +203,11 @@ article#video .video-conteiner {
   border-left: 9px solid var(--destaque-inverso);
   transition: border-left-width 0.5s, border-color 0.5s;
 }
-
 #projeto-conteiner .projeto:hover {
   border-left-width: 15px;
   border-color: var(--destaque);
   cursor: pointer;
 }
-
 #projeto-conteiner .foto {
   width: 100%;
   aspect-ratio: 16/9;
@@ -244,7 +215,6 @@ article#video .video-conteiner {
   overflow: hidden;
   border-radius: 8px;
 }
-
 footer {
   background-color: var(--destaque);
   color: var(--texto-inverso);
@@ -252,19 +222,32 @@ footer {
   padding: 10px;
   margin-top: 20px;
 }
-
 footer a {
   color: var(--texto-inverso);
   text-decoration: none;
   font-weight: bold;
 }
-
 footer a:hover {
   color: var(--destaque-inverso);
 }
 
 @media screen and (min-width: 768px) {
-  #skills-conteiner {
+  main {
+    grid-template-columns: auto 300px 1fr auto;
+  }
+
+  section#ficha {
+    grid-column: 2 / 3;
+    height: fit-content;
+    position: sticky;
+    top: 83px;
+  }
+
+  section#detalhes {
+    grid-column: 3 / 4;
+  }
+
+  section#detalhes #skills-conteiner {
     grid-template-columns: 1fr 1fr;
   }
 
