adaptando algumas o texto e colocando paragrafo em ficha

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -87,6 +87,10 @@ section#ficha h1 {
   font-size: 1.5em;
   text-align: left;
 }
+section#ficha p {
+  text-align: justify;
+  text-indent: 16px;
+}
 div#social {
   display: flex;
   justify-content: center;
@@ -98,9 +102,10 @@ div#social {
 }
 div#social a {
   color: var(--destaque);
-  transition: color 0.5s;
+  transition: color 0.5s, transform 0.5s;
 }
 div#social a:hover {
+  transform: scale(1.2);
   color: var(--destaque-inverso);
 }
 section#detalhes {
