--- a/estilo/style.css
+++ b/estilo/style.css
@@ -137,19 +137,13 @@ article h2 {
   color: var(--destaque);
   margin-bottom: 20px;
 }
-article#video .video-conteiner {
-  position: relative;
-  width: 100%;
-  margin: auto;
-  aspect-ratio: 16/9;
+article#apresentacao p {
+  text-align: justify;
+  text-indent: 16px;
 }
-.video-conteiner iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
+article#apresentacao h4 {
+  margin-bottom: 4px;
+  color: var(--destaque-inverso);
 }
 #skills-conteiner {
   display: grid;
