--- a/estilo/style.css
+++ b/estilo/style.css
@@ -213,6 +213,43 @@ article#apresentacao h4 {
   font-size: 1.1em;
 }
 
+#experiencias-conteiner {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 15px;
+}
+#experiencias-conteiner .experiencia {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: var(--fundo-principal);
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  padding-left: 8px;
+  transition: border-left-width 0.5s, border-color 0.5s;
+}
+#experiencias-conteiner .experiencia:hover {
+  border-left-width: 15px;
+  border-color: var(--destaque);
+  cursor: pointer;
+}
+#experiencias-conteiner .periodo {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: var(--texto);
+}
+#experiencias-conteiner .cargo {
+  color: var(--destaque-inverso);
+  font-size: 1.1em;
+}
+#experiencias-conteiner .fotos {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
 #projeto-conteiner {
   display: flex;
   flex-direction: column-reverse;
