atualizando cores do tema escuro.

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,8 +31,8 @@ body.escuro {
   --fundo-principal: #222222;
   --texto: #e0e0e0;
   --texto-inverso: #333333;
-  --destaque: #5adf2e;
-  --destaque-inverso: #ea8567;
+  --destaque: #22d8d5dc;
+  --destaque-inverso: #08084d;
   --fundo-card: #444444;
 }
 
